# ela-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yaml  rust-toolchain.toml  template.sqlite
src/: database_interactions.rs  main.rs
static/: index.html
