[package]
name = "ela-api"
version = "0.5.0"
edition = "2021"

[dependencies]
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors.git", rev = "54fae070"  }

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["uuid", "json"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_sqlite"]
